Fixes horizontal alignment of children in Landing CSS

--- a/client/src/Components/Landing/Landing.css
+++ b/client/src/Components/Landing/Landing.css
@@ -4,7 +4,7 @@
   flex: 1;
   flex-flow: row nowrap;
   justify-content: space-between;
-  margin: 80px 60px;
+  padding: 0 60px;
   max-width: 1000px;
   margin: auto;
 }
